[project]
name = "agno-sandbox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.9",
    "openai>=2.38.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "playwright>=1.52.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
